The login, register, reset form complete

--- a/resources/assets/sass/overrides.scss
+++ b/resources/assets/sass/overrides.scss
@@ -1,3 +1,17 @@
+//Text overrides
+a.is-muted {
+ color: whitesmoke;
+}
+
+
+
+
+
+
+//Dropdown Override
+
+
+
 .dropdown {
   position: relative;
 
