--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,6 +1,7 @@
 
 // Body
-$body-bg: #f5f8fa;
+$body-bg: blue;
+$body-background: whitesmoke;
 
 // Borders
 $laravel-border-color: darken($body-bg, 10%);
